Update Quarkus to 3.27